# ComfyUI-image-profile

./: .gitignore  README.md  __init__.py  nodes.py  package.json  pyproject.toml
scripts/: app.js
tests/: test_nodes.py  test_nodes_extended.py
web/: image_profile.js
web/__tests__/: app-stub.mjs  image_profile_pure.test.mjs
